Project, Task created.

--- a/PiCTS.Entities/PiCTS.Entities.csproj
+++ b/PiCTS.Entities/PiCTS.Entities.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DataTransferObjects\TaskUsersDTOs\RequestDTOs\" />
     <Folder Include="DataTransferObjects\UserBranchesDTOs\RequestDTOs\" />
     <Folder Include="DataTransferObjects\UserRolesDTOs\RequestDTOs\" />
     <Folder Include="DataTransferObjects\UserRolesDTOs\ResponseDTOs\" />
